# all_codesv3

./: .gitignore
__rust__/Novelter/: Cargo.toml  f  novels.db
__rust__/Novelter/chrome_profile/: .org.chromium.Chromium.R6FTZI  Local State
__rust__/Novelter/chrome_profile/Default/: .org.chromium.Chromium.LKnvZT  BrowsingTopicsState  DIPS-wal  Favicons  History  History-journal  Preferences  Web Data
__rust__/Novelter/chrome_profile/Default/DawnGraphiteCache/: index
__rust__/Novelter/chrome_profile/Default/DawnWebGPUCache/: index
__rust__/Novelter/chrome_profile/Default/Extension Rules/: LOG
__rust__/Novelter/chrome_profile/Default/Extension Scripts/: LOG
__rust__/Novelter/chrome_profile/Default/Extension State/: LOG
__rust__/Novelter/chrome_profile/Default/GCM Store/: LOG
__rust__/Novelter/chrome_profile/Default/GPUCache/: index
__rust__/Novelter/chrome_profile/Default/Session Storage/: LOG
__rust__/Novelter/chrome_profile/Default/Sessions/: Session_13412282571466281
__rust__/Novelter/chrome_profile/Default/Site Characteristics Database/: LOG
__rust__/Novelter/chrome_profile/GrShaderCache/: index
__rust__/Novelter/chrome_profile/GraphiteDawnCache/: index
__rust__/Novelter/chrome_profile/ShaderCache/: index
__rust__/Novelter/chrome_profile/segmentation_platform/: ukm_db
__rust__/Novelter/src/: config.rs  db.rs  macros.rs  main.rs  main_copy.rs  novelter.rs
__rust__/Novelter/src/models/: chapters.rs  mod.rs  novels.rs
__rust__/e-components/: Cargo.toml  Read.md  promt  в.txt
__rust__/e-components/animation/: Cargo.toml
__rust__/e-components/animation-macros/: Cargo.toml
__rust__/e-components/animation-macros/src/: animation_parse.rs  inner_parser.rs  lib.rs  struct_parser.rs
__rust__/e-components/animation/src/: easing.rs  effects.rs  egui.rs  lib.rs  motion.rs  timeline.rs
__rust__/e-components/old/: lib.rs
__rust__/e-components/old/preset/: mod.rs
__rust__/e-components/old/utils/: context.rs  easing.rs  macros.rs  mod.rs  sup.rs
__rust__/e-components/src/: main.rs
__rust__/e-components/src/e_comp/: button.rs  mod.rs
__rust__/e-components/src/test/: btn.rs  header.rs  sidebar.rs
__rust__/interface/: Cargo.toml
__rust__/interface/settings/: config.yaml  settings.yaml
__rust__/interface/src/: config.rs  main.rs
__rust__/interface/src/components/: commands.rs  mod.rs  output.rs  systems.rs
__rust__/interface/src/layout/: footer.rs  header.rs
__rust__/interface/src/pages/: about.rs  home.rs  mod.rs  settings.rs
__rust__/interface/src/pages/redactor/: combine.rs  (+3 more)
__rust__/interface/src/utils/: console.rs  messages.rs  mod.rs  modal.rs
__rust__/test-builder/: Cargo.toml
__rust__/test-builder/src/: main.rs
__rust__/ui-translate/: Cargo.toml
__rust__/ui-translate/src/: c_btn.rs  fff.rs  main.rs  program.rs  sidebar.rs
(+199 files in other folders)
