[package]
name = "Novelter"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
crc32fast = "1.5.0"
fake = "4.4.0"
futures = "0.3.31"
headless_chrome = "1.0.20"
image = { version = "0.25.9", features = ["avif"] }
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.9.2"
regex = "1.12.2"
reqwest = "0.12.28"
scraper = { version = "0.25.0", features = ["atomic"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros","debug-print"] }
serde = "1.0.228"
serde_json = "1.0.148"
tokio ={ version = "1.48.0", features = ["full"]}
zstd = "0.13.3"


