[package]
name = "e-components"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version ="0.32.3",features = ["__screenshot","default"] }
egui = "0.32.3"
egui_extras = "0.32.3"
env_logger = "0.11.8"
paste = "1.0.15"

# animation-macros = { path = "./animation-macros/" }
animation= { path = "animation/" }
rand = "0.9.2"
once_cell = "1.21.3"
# Если paste используется в макросах, может потребоваться:

