[package]
name = "interface"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
iced = { version = "0.13.1", features = ["tokio"] }
indicatif = "0.18.3"
nix = {version = "0.30.1",features = ["user"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.5.0" # Или другая версия из списка кандидатов
