[package]
name = "test-builder"
version = "0.1.0"
edition = "2024"




# tokio = { version = "1.48.0", features = ["full"] }
# tokio-macros = "2.5.0" # Или другая версия из списка кандидатов
[dependencies]
iced = {version = "0.12",features = ["tokio"]}
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"