[package]
name = "ui-translate"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["smol"] }
iced_anim = "0.2.1"
rfd = "0.15.4"
open = "5.3.2"
docx-rust = "0.1.10"
futures = "0.3.31"
regex = "1.11.2"
rust-translate = "0.1.3"
tokio = { version = "1.0", features = ["full"] }
